--- a/style.css
+++ b/style.css
@@ -189,10 +189,10 @@ footer {
 
   .hero_image {
     display: flex;
-    border-radius: 15px;
     justify-content: center;
   }
   .hero_image img {
+    border-radius: 25%;
     width: 80%;
   }
   .hero_content {
